--- a/bookworld/templates/admin/edit_book.html
+++ b/bookworld/templates/admin/edit_book.html
@@ -22,8 +22,8 @@
                     <input type="text" name="book_name" value="{{book_details.book_name}}" class="form-control mt-3" placeholder="First Name">
                     <span class="authorhead">Author's  Name</span>
                     <input type="text" name="author_name" value="{{book_details.author}}" class="form-control" placeholder="Second Name">
-                    <span class="authorhead">Description</span><br>Usermedia quries here
-                   <textarea name="description" value="{{book_details.description}}" placeholder="Description" class="form-controls" rows="10" cols="40">{{book_details.description}}</textarea>
+                    <span class="authorhead">Description</span><br>
+                   <textarea name="description" value="{{book_details.description}}" placeholder="Description" class="form-controls w-100" rows="6" >{{book_details.description}}</textarea>
                    <br>
                     <span class="authorhead">Price</span>
                     <input type ="number" name="price" value="{{book_details.price}}" class="form-control" placeholder="Price">
