--- a/bookworld/templates/admin/productmanagement.html
+++ b/bookworld/templates/admin/productmanagement.html
@@ -1,5 +1,7 @@
 {% extends 'admin/adminindex.html' %}
-
+{% block script %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+{% endblock %}
 {% block status %}
 
 
@@ -23,8 +25,8 @@
                         {% csrf_token %}
                         <div class="input-group mb-3">
 
-                            <input type="text" name="search" class="form-control" placeholder="Search by book name" aria-label="search" aria-describedby="button-addon2">
-                                <button class="btn btn-outline-sucsess bg-secondary text-warning" type="submit" id="button-addon2">Search</button>
+                            <input type="text" name="search" class="form-control rounded-0" placeholder="Search by book name" aria-label="search" aria-describedby="button-addon2">
+                                <button class="btn btn-outline-sucsess bg-secondary text-warning rounded-0" type="submit" id="button-addon2">Search</button>
                             </div>
                         </form>
                     </div>
@@ -33,20 +35,116 @@
                 <div class="row">
                     <div class="col-md-12 col-12">
                         <div class="row">
-                            <div class="col-md-3 col-6">
+                            {% comment %} <div class="col-md-3 col-6">
                                 <span class="adminheadstatus">Total Book Selled:<strong>{{book_selled_count}}</strong></span>
+                            </div> {% endcomment %}
+
+                            <div class="col-md-3 col-sm-4  admin_status_box d-flex justify-content-center align-items-center mb-3">
+                                <div class=" h-100 w-75 border  border-2 border-warning">
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center p-2">
+                                        <span class="Roboto text-warning text-center">
+                                            <i class="fa-solid fa-book"></i>
+                                            &nbsp;Total Books Selled
+                                            
+                                        </span>
+                                    </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center" >
+                                        
+                                        <span class="adminheadstatus display-3" >{{ book_selled_count }}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    
+                                 
+                                </div>
+                                
                             </div>
-                            <div class="col-md-3 col-6">
+
+                            {% comment %} <div class="col-md-3 col-6">
                                 <span class="adminheadstatus">Total Books in Stock:&nbsp<strong>{{ p_count }}</strong>
                                 </span>
+                            </div> {% endcomment %}
+                            <div class="col-md-3 col-sm-4  admin_status_box d-flex justify-content-center align-items-center mb-3">
+                                <div class=" h-100 w-75 border  border-2 border-warning">
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center p-2">
+                                        <span class="Roboto text-warning text-center">
+                                            <i class="fa-solid fa-book"></i>
+                                            Total Books In Stock
+                                            
+                                        </span>
+                                    </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center" >
+                                        
+                                        <span class="adminheadstatus display-3" >{{ p_count }}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    
+                                 
+                                </div>
+                                
                             </div>
-                            <div class="col-md-3 col-6">
+                            {% comment %} <div class="col-md-3 col-6">
                                 <span class="adminheadstatus">New Orders:<strong>{{new_orders}}</strong></span>
+                            </div> {% endcomment %}
+                            <div class="col-md-3 col-sm-4  admin_status_box d-flex justify-content-center align-items-center mb-3">
+                                <div class=" h-100 w-75 border  border-2 border-warning">
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center p-2">
+                                        <span class="Roboto text-warning text-center">
+                                            <i class="fa-solid fa-book"></i>
+                                            New Orders
+                                            
+                                        </span>
+                                    </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center" >
+                                        
+                                        <span class="adminheadstatus display-3" >{{ new_orders }}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    
+                                 
+                                </div>
+                                
                             </div>
-                            <div class="col-md-3 col-6">
+                            {% comment %} <div class="col-md-3 col-6">
                                 <span class="adminheadstatus">Out of Stock&nbsp<strong>{{ outofstock }}</strong>
                                 </span>
+                            </div> {% endcomment %}
+                            <div class="col-md-3 col-sm-4  admin_status_box d-flex justify-content-center align-items-center mb-3">
+                                <div class=" h-100 w-75 border  border-2 border-warning">
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center p-2">
+                                        <span class="Roboto text-warning text-center">
+                                            <i class="fa-solid fa-book"></i>
+                                            outofstock
+                                            
+                                        </span>
+                                    </div>
+                                    </div>
+                                    <div class="row">
+                                        <div class="col-12 d-flex justify-content-center align-items-center" >
+                                        
+                                        <span class="adminheadstatus display-3" >{{ outofstock }}</span>
+                                        </div>
+                                    </div>
+                                    
+                                    
+                                 
+                                </div>
+                                
                             </div>
+
+
                         </div>
 
 
@@ -102,9 +200,9 @@
 
                                             {% endif %}
 
-                                            <a href="delete_book/{{ p.id }}" class="text-decoration-none">
-                                                <button type="button" class="btn btn-danger btn-sm rounded-0">Delete </button>
-                                            </a>
+                                            {% comment %} <a href="delete_book/{{ p.id }}" class="text-decoration-none"> {% endcomment %}
+                                                <button type="button" class="btn btn-danger btn-sm rounded-0" onclick="deleteBook('{{p.id}}')">Delete </button>
+                                            {% comment %} </a> {% endcomment %}
                                         </td>
                                     </tr>
 
@@ -123,15 +221,15 @@
                                 <ul class="pagination">
                                     {% if not pro.has_previous %}
                                     {% else %}
-                                    <li class="page-item text-center"><a class="page-link text-secondary border-warning" href="?page={{pro.previous_page_number}}">Previous</a></li>
+                                    <li class="page-item text-center text-center"><a class="page-link text-secondary border-warning" href="?page={{pro.previous_page_number}}">Previous</a></li>
 
                                     {% endif %}
                                 
-                                  <li class="page-item text-secondary border-warning disabled"><a class="page-link text-secondary border-warning border-warning" href="#">{{pro.number}} of {{pro.paginator.num_pages}}</a></li>
+                                  <li class="page-item text-secondary border-warning disabled text-center"><a class="page-link text-secondary border-warning border-warning" href="#">{{pro.number}} of {{pro.paginator.num_pages}}</a></li>
                                     {% if pro.has_next %}
                          
 
-                                    <li class="page-item border-warning"><a class="page-link text-secondary border-warning" href="?page={{pro.next_page_number}}">Next</a></li>
+                                    <li class="page-item border-warning text-center"><a class="page-link text-secondary border-warning" href="?page={{pro.next_page_number}}">Next</a></li>
 
                                     {% endif %}
 
@@ -146,6 +244,45 @@
         </div>
             </div>
        
-        
+            <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+            <script type="text/javascript">
+         
+             function deleteBook(book_id) {
+                 console.log(typeof(book_id))
+                 swal({
+                   title: "Are you sure?",
+                   text: "Do you want to Delete this Book  " ,
+                   icon: "warning",
+                   buttons: true,
+                   dangerMode: true,
+                 }).then((willDelete) => {
+                   if (willDelete) {
+                     swal("Book Deleted successfully", {
+                       icon: "success",
+                     })
+                     
+                     console.log("block user ajax");
+                      $.ajax({
+                       url: 'block_user/'+book_id,
+                       data: {
+                         
+                       },
+                       method: "GET",
+                       success: (response) => {
+                         if (response) {
+                           location.reload();
+                         }
+                         console.log(response)
+                       },
+                     }); 
+                       
+                   } else {
+                     // swal("");
+                   }
+                 });
+               
+                 
+                    }
+                </script>         
 
 {% endblock %}
