--- a/bookworld/templates/admin/usersview.html
+++ b/bookworld/templates/admin/usersview.html
@@ -1,6 +1,7 @@
 {% extends 'admin/adminindex.html' %}
-
-
+{% block script %}
+<script src="https://unpkg.com/sweetalert/dist/sweetalert.min.js"></script>
+{% endblock %}
 {% block status %}
 
 
@@ -11,6 +12,7 @@
                   <span class="adminheadstatus fs-1 text-secondary">User Management</span>
                 </div>
                 </div>
+          
             <div class="row">
                 <div class="col-md-4">
                     <span class="adminheadstatus">Total No of User:&nbsp<b>{{ usercount }}</b></span>
@@ -32,8 +34,8 @@
                         {% csrf_token %}
                         <div class="input-group mb-3">
                             
-                            <input type="text" name ="search" class="form-control" placeholder="Search by firstname" aria-label="search" aria-describedby="button-addon2">
-                            <button class="btn btn-outline-sucsess bg-secondary text-warning" type="submit" id="button-addon2">Search</button>
+                            <input type="text" name ="search" class="form-control rounded-0" placeholder="Search by firstname" aria-label="search" aria-describedby="button-addon2">
+                            <button class="btn btn-outline-sucsess bg-secondary text-warning rounded-0" type="submit" id="button-addon2">Search</button>
                         </div>
                 </form>
                 </div>
@@ -62,22 +64,22 @@
                                 <td>
 
                                     <a href="edit_user/{{ acc.id }}" class="text-decoration-none">
-                                        <button class="btn btn-secondary">View User</button>
+                                        <button class="btn btn-secondary rounded-0">View</button>
                                     </a>
 
                                     {% if acc.is_blocked %}
                                         <a href="unblock_user/{{ acc.id }}" class="text-decoration-none">
-                                            <button type="button" class="btn btn-success">UnBlock User</button>
+                                            <button type="button" class="btn btn-success rounded-0">UnBlock</button>
                                         </a>
                                     {% else %}
-                                        <a href="block_user/{{ acc.id }}" class="text-decoration-none">
-                                            <button type="button" class="btn btn-secondary">Block User</button>
-                                        </a>
+                                        {% comment %} <a href="block_user/{{ acc.id }}" class="text-decoration-none"> {% endcomment %}
+                                            <button type="button" class="btn btn-secondary rounded-0 block" value="{{acc_id}}" onclick="blockUser('{{acc.id}}')">Block </button>
+                                        {% comment %} </a> {% endcomment %}
                                     {% endif %}
-
-                                    <a href="delete_user/{{ acc.id }}" class="text-decoration-none">
-                                        <button type="button" class="btn btn-danger">Delete User</button>
-                                    </a>
+<!-- 
+                                    <a href="delete_user/{{ acc.id }}" class="text-decoration-none"> -->
+                                        <button type="button" class="btn btn-danger rounded-0" onclick="deleteUser('{{acc.id}}')" >Delete </button>
+                                    <!-- </a> -->
                                 </td>
                             </tr>
 
@@ -97,14 +99,14 @@
                             <ul class="pagination">
                                 {% if not account.has_previous %}
                                     {% else %}
-                                        <li class="page-item text-center">
+                                        <li class="page-item text-center text-center">
                                             <a class="page-link text-secondary
                                                                                         border-warning" href="?page={{ account.previous_page_number }}">Previous</a>
                                         </li>
                                 {% endif %}
 
                                 <li class="page-item text-secondary
-                                                                            border-warning disabled">
+                                                                            border-warning disabled text-center">
                                     <a class="page-link
                                                                                 text-secondary border-warning
                                                                                 border-warning" href="#">{{ account.number }}
@@ -114,7 +116,7 @@
                                 {% if account.has_next %}
 
 
-                                    <li class="page-item border-warning">
+                                    <li class="page-item border-warning text-center">
                                         <a class="page-link text-secondary
                                                                                     border-warning" href="?page={{ account.next_page_number }}">Next</a>
                                     </li>
@@ -130,4 +132,86 @@
 
 
     </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js" integrity="sha512-894YE6QWD5I59HgZOGReFYm4dnWc1Qt5NtvYSaNcOP+u1T9qYdvdihz0PPSiiqn/+/3e7Jo4EaG7TubfWGUrMQ==" crossorigin="anonymous" referrerpolicy="no-referrer"></script>
+   <script type="text/javascript">
+
+    function blockUser(acc_id) {
+        console.log(typeof(acc_id))
+        swal({
+          title: "Are you sure?",
+          text: "Do you want to Block this User  " ,
+          icon: "warning",
+          buttons: true,
+          dangerMode: true,
+        }).then((willDelete) => {
+          if (willDelete) {
+            swal("User Blocked successfully", {
+              icon: "success",
+            })
+            
+            console.log("block user ajax");
+             $.ajax({
+              url: 'block_user/'+acc_id,
+              data: {
+                
+              },
+              method: "GET",
+              success: (response) => {
+                if (response) {
+                  location.reload();
+                }
+                console.log(response)
+              },
+            }); 
+              
+          } else {
+            // swal("");
+          }
+        });
+      
+        
+           }
+
+           function deleteUser(acc_id) {
+        console.log(typeof(acc_id))
+        swal({
+          title: "Are you sure?",
+          text: "Do you want to Delete this User  "+ acc_id ,
+          icon: "warning",
+          buttons: true,
+          dangerMode: true,
+        }).then((willDelete) => {
+          if (willDelete) {
+            swal("User Deleted successfully", {
+              icon: "success",
+            })
+            
+            console.log("delete user ajax");
+             $.ajax({
+              url: 'delete_user/'+acc_id,
+              data: {
+                
+              },
+              method: "GET",
+              success: (response) => {
+                if (response) {
+                  location.reload();
+                }
+                console.log(response)
+              },
+            }); 
+              
+          } else {
+            // swal("");
+          }
+        });
+      
+        
+           }
+    
+
+
+
+
+    </script>
 {% endblock %}
